Removed ScalaTool.